[project]
name = "tensor-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heng", email = "31088159+shiukaheng@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.20.2",
    "ipykernel>=6.29.5",
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
    "jupyter>=1.1.1",
    "numpy>=2.2.5",
    "torch>=2.7.0",
    "typeguard>=4.4.2",
]

[project.scripts]
tensor-collection = "tensor_collection:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
