[project]
name = "tensor-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heng", email = "31088159+shiukaheng@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beartype",
    "jax",
    "jaxtyping",
    "jupyter",
    "numpy",
    "torch",
    "typeguard",
]

[project.scripts]
tensor-collection = "tensor_collection:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
